samples/_failures_safe/1761486904_82fa95_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0284c599.c: In function ‘main’:
./samples/SAFE/__tmp_0284c599.c:173:5: error: expected ‘,’ or ‘;’ at end of input
  173 |     size_t len = strlen
      |     ^~~~~~
./samples/SAFE/__tmp_0284c599.c:173:5: error: expected declaration or statement at end of input
